- Added run-time configurable backtracking/recursion limits for PCRE. (Andrei)
- Added preg_last_error(). (Andrei)
- Added support for Apache 2.2 handler in the Windows distro. (Edin)
- Added pg_field_table() function. (Edin)
- Added implementation of curl_multi_info_read(). (Brian)
- Added RFC2397 (data: stream) support. (Marcus)
- Fixed handling of extremely long paths inside tempnam() function. (Ilia)
- Fixed bug #37587 (var without attribute causes segfault). (Marcus)
- Fixed bug #37569 (WDDX incorrectly encodes high-ascii characters). (Ilia)
- Fixed bug #37565 (Using reflection::export with simplexml causing a crash).
  (Marcus)
- Fixed bug #37563 (array_key_exists performance is poor for &$array). (Ilia)
- Fixed bug #37558 (timeout functionality doesn't work after a second PHP
  starup on the same thread). (p dot desarnaud at wanadoo dot fr)
- Fixed bug #37514 (strtotime doesn't assume year correctly). (Derick)
- Fixed bug #37510 (session_regenerate_id changes session_id() even on 
  failure). (Hannes)
- Fixed bug #37505 (touch() truncates large files). (Ilia)
- Fixed bug #37499 (CLI segmentation faults during cleanup with sybase-ct 
  extension enabled). (Tony)
- Fixed bug #37496 (FastCGI output buffer overrun). (Piotr, Dmitry)
- Fixed bug #37487 (oci_fetch_array() array-type should always default to
  OCI_BOTH). (Tony)
- Fixed bug #37395 (recursive mkdir() fails to create nonexistent directories 
  in root dir). (Tony)
- Fixed bug #37457 (Crash when an exception is thrown in accept() method of 
  FilterIterator). (Marcus)
- Fixed bug #37456 (DOMElement->setAttribute() loops forever). (Rob)
- Fixed bug #37428 (PHP crashes on windows if there are startup errors
  and event log is used for logging them). (Edin)
- Fixed bug #37418 (tidy module crashes on shutdown). (Tony)
- Fixed bug #37416 (iterator_to_array() hides exceptions thrown in rewind()
  method). (Tony)
- Fixed bug #37413 (Rejected versions of flex that don't work). (Ilia)